<resources>
    <string name="app_name">MyViewAndViews</string>

    <string name="content_text">Perjuangan BJ Habibie dari masa kecil hingga menjadi Presiden Indonesia ketiga dilaluinya
    dengan keras dan penuh perjuangan yang panjang. Banyak peran dan karya BJ Habibie bagi Bangsa Indonesia dalam bidang
    Kedirgantaraan. Berikut profil dan biografi BJ Habibie dari masa kecil hingga dia sukses hingga saat ini</string>
    <string name="nama">Prof. Dr. Ing. H. Bacharudding Jusuf Habibie</string>
    <string name="TTL">Parepare, 25 Juli 1936</string>
    <string name="Jabatan">Presiden Indonesia ke -3 \n Wakil Presiden Indonesia ke -7 \n
    Menteri Riset dan Teknologi Indonesia ke -4</string>
    <string name="Penemuan">Crack Progression Theory \n
    N-250\n
    Pesawat R80</string>
    <string name="Donasi">Donasi Pesawat R80</string>
    <string name="Ajakan">Sudah saatnya Indonesia punya pesawat sendiri, salurkan donasi Anda</string>

</resources>
